diagonal/styles.css
    
:root {
  --opacidad: 1.1;
  --opacidad2: 1.1;
  --arriba: 0; 
  --abajo: 0;
  --boton: 7px;
  --column-spacing: 30px !important;
  --color-bg-default: #ced4da !important;
   /*WORKAROUND HOVER EFFECT UNSET */
  --color-border-default: #ced4da !important
 }
 


::-webkit-scrollbar {
  width: 0px !important;
}


::-webkit-scrollbar-track {
  box-shadow: inset 0 0 0 0 transparent !important;
  border: solid 0 transparent !important;
}

::-webkit-scrollbar-thumb {
  box-shadow: inset 0 0 0 0 transparent !important;
  border: solid 0px transparent !important;
  
}

::-webkit-scrollbar-button {
  display: none  !important;
}


 
 body {
            animation: fadeInAnimation ease 3s;
            animation-iteration-count: 1;
            animation-fill-mode: forwards;
        }
        @keyframes fadeInAnimation {
            0% {
                opacity: 0;
            }
            100% {
                opacity: 1;
            }
        }
 

.super-navbar__item {
  background: #343a40;
  color: #f8f9fa;
  border-radius: 5px;
  font-size: 1.2rem;
  max-width: 164px;
  position: relative;
  left: 10px;
  margin-left: 10px;
  text-transform: uppercase;
  margin-bottom: 8px;
}

.super-navbar__item {
  font-weight: 900 !important;
 }

.super-navbar__logo-text {
  color: #212529; !important;
 }

.notion-link {
  color: #e9ecef !important;
 }


/* LAYOUT */

.super-content {
  position: relative;
}

div[id^="page-index"]
.notion-header__title {
  display: none !important;
}

div[id^="page-index"]
.notion-heading {
  display: none !important;
}

div[id^="page-index"]
.max-width {
  position: absolute;
  top: 26%;
  left: 45%;
  transform: translate(-50%, -10%);
}

.notion-toggle {
  display: none;
 }

.notion-property__title__icon-wrapper {
  display: none !important;
 }

.notion-collection__header-wrapper {
  display: none;
 }

.notion-header__content.max-width {
  max-width: 722px;
 }



/* STYLING OF MAIN PAGE VIA */
/* POSTS TITLES */
/* POSTS PROPS */
 
 .notion-property__title {
  background: #DEE2E6;
  padding: 6px !important;
  margin: 7px;
}

.notion-property__title > span {
  font-size: 1.2em !important;
  font-weight: 600 !important;
  padding-left: 10px;
}

.notion-pill {
  padding: 13px 40px !important;
 }
 
.notion-collection-list__item-property {
    text-decoration: none;
    font-size: 9.5rem;
    font-weight: 700;
    position: relative;
    left: 30px;
    letter-spacing: -5px;
}

.notion-collection-list {
  border: none !important;
  overflow: hidden !important;
 }
 
.notion-collection-list__item {
  padding: 20px;
  background: #CED4DA;
  width: 100%;
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
  padding: 4px 4px;
  margin: 1px 0;
  border-radius: 4px;
  cursor: pointer;
  color: inherit;
  text-decoration: none;
  position: relative;
}


.notion-collection-list__item .notion-property__title .notion-semantic-string > span {
    border-bottom: none !important;
  }

/* ATTACK THE COLUMNS */
.notion-column-list {
  position: relative;
  flex-direction: column;
  align-items: center;
}
 
.notion-column:nth-of-type(even) {
  position: relative;   
  max-width: 590px;
  min-width: 590px;
  left: 76px;
  bottom: var(--arriba);
  filter: brightness(var(--opacidad));
}

  .notion-column:nth-of-type(odd) {
  position: relative;
  min-width: 590px;
  max-width: 590px;
  left: 90px;
  top: var(--abajo);
  filter: brightness(var(--opacidad2));
}


/* INTERNAL PAGES */

.notion-page__properties {
    display: none;
  }
  
  /* STYLING INTERNAL PAGES */

div[id^="parent-page__lists-of-posts"] .notion-header__title {
    transform: unset !important;
    margin-bottom: 10px;
  }

p {
   font-size: 1.3rem;
  }

/* EXTRA WIDTH ADAPT */

@media (min-width:1381px) {
  .notion-image{
  left: -20vw !important;
  }
}


/* TABLET ADAPT 1 + LANDSCAPE IPHONE X*/

@media (min-width:696px) and (max-width : 960px) {
  
  div[id^="page-index"]
  .notion-column-list{ 
    left: -50px;
    margin-top: 5vh;
  }
   .notion-column:nth-of-type(odd) {
   
  top: 296px;
  opacity: 1;
}

#hola {
  opacity: 0 !important;
}
}

/* TABLET ADAPT 2*/

@media (min-width:481px) and (max-width : 695px) {
    
  div[id^="page-index"]
  .notion-column-list{ 
    right: 50px !important;
    margin-top: 5vh !important;
    }
    .notion-column:nth-of-type(even) {
    /* width: 100% !important; */
    margin-inline-start: 25px !important;
    }
    .notion-column:nth-of-type(odd) {
      opacity: 1;
    }
    #hola {
      opacity: 0;
    }
}


/* MOBILE ADAPT 1 */
@media (min-width:320px) and (max-width : 480px){
  
  .super-content {
    padding: 25px !important;
    
  }
  
  .notion-column {
    padding: 50px !important;
    margin-left: 34px !important;
  }
    
  .notion-column-list {
    margin-left: 40px !important;
  }
  
.notion-collection-list__item {
  flex-direction: column !important;
  padding: 0 !important;
  margin: 0 !important;
  background: none !important;
  display: block !important;
  width: 65% !important;
  border: none !important;
  border-radius: 1px !important;
}

.notion-collection-list__item-property 
{ 

  
  font-size: 14.5rem !important;
  font-weight: 700 !important;
  padding: 0px !important;
  margin-top: -20px !important;
  margin-bottom: 25px !important;
  z-index: -1 !important; 
  text-decoration: none !important;
  letter-spacing: -8px !important;
}

 .notion-property__title {
   padding: 5px !important;
   font-size: 1.27rem !important;
   border-radius: 3px !important;
}

.notion-property__title > span > span {
   width: 250px !important;
  white-space: nowrap !important;
  overflow: hidden !important;
  text-overflow: ellipsis !important;
}

.notion-pill {
     padding: 18px 40px !important;
     width: 80% !important;
     border-radius: 3px !important;
  }

  .notion-column:nth-of-type(odd) {
  position: relative !important;   
  max-width: 590px !important;
  min-width: 590px !important;
  left: 90px !important;
  top: 590px !important;
  opacity: 1 !important;
}

  
  .notion-column:nth-of-type(even) {
  position: relative !important;   
  max-width: 590px !important;
  min-width: 590px !important;
  left: 90px !important;
  bottom: 590px !important;
}

.notion-image {
    display: none !important;
  }
  
  #hola {
    opacity: 0 !important;
  }
}


/* MOBILE ADAPT 2 */

@media only screen and (-webkit-min-device-pixel-ratio: 2),
                    only screen and (min--moz-device-pixel-ratio: 2),
                    only screen and (-o-min-device-pixel-ratio: 2/1),
                    only screen and (min-device-pixel-ratio: 2)
                    {
 .super-content {
  transform: scale (0.8);
   }
 }
 
 /* ABOUT US */
 div[id^="page-about-nosotros"]
 .bg-pink {
    background: unset !important;
    font-size: 0.9rem;
  }
  
 div[id^="page-about-nosotros"] 
  strong {
    font-weight: 700 !important;
    line-height: 1 !important;
  }
  
   div[id^="page-about-nosotros"] h2  {
    font-weight: 900 !important;
    line-height: 1 !important;
    padding: 15px;
    border-radius:4px;
    margin: 15px;
  }
  
 .notion-callout {
    margin-top: 100px;
    font-weight: 700 !important;
    line-height: 1 !important;
    background: #DEE2E6 !important;
    border-radius: 6px !important;
    border: none !important;
  }
  
  .notion-callout__icon {
    display: none;
  }
  
/* SWITCH LANGUAGE */

[data-theme="light"], :root {
  --opacidad: 1.08 !important;
  --opacidad2: 1.08 !important;
  --arriba: 256px;
  --abajo: 286px;
  --boton: 7px;
}

[data-theme="dark"] {
  --opacidad: 1.1 !important;
  --opacidad2: 1.1 !important;
  --arriba: 0;
  --abajo: 20px;
  --boton: -82px;
}

#hola {
    position: relative;
    display: block !important;
    transform: scale(0.6);
  }
  
#hola > p {
    margin: 1vh auto 0;
    transform: translateY(-50%);
    width: 46px;
    padding-left: 200px;
    font-size: 1.5rem;
    font-weight: 600;
    letter-spacing: 1.2px !important;
    margin-bottom: 3px;
  }
  
#hola > p > img {
    border-radius: 4px;
    border: 1px groove #ADB5BD;
    width: 52px !important;
    height: 48px !important;
    position: relative;
    top: 43px !important;
    right: var(--boton)!important;
    margin-bottom: -5px;
    box-shadow: rgba(9, 30, 66, 0.25) 0px 1px 1px, rgba(9, 30, 66, 0.13) 0px 0px 1px 1px;
  }
  

  
  

  

